# Pico_Testing

./: .gitmodules
my_project/: CMakeLists.txt  my_code.c
pico_sensor_bt/: CMakeLists.txt  main.c
